borsh-derive/src/snapshots/borsh_derive__struct_schema__tests__generic_associated_type_param_override_conflict.snap
---
source: borsh-derive/src/struct_schema.rs
expression: actual.unwrap_err()
---
Error(
    "`borsh_skip` cannot be used at the same time as `schema(params = ...)`",
)
