borsh-derive/src/snapshots/borsh_derive__struct_schema__tests__generic_tuple_struct_borsh_skip4.snap
---
source: borsh-derive/src/struct_schema.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<C> borsh::BorshSchema for ASalad<C> {
    fn declaration() -> borsh::schema::Declaration {
        "ASalad".to_string()
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::UnnamedFields(
            borsh::__private::maybestd::vec![
                < Tomatoes as borsh::BorshSchema > ::declaration(), < Oil as
                borsh::BorshSchema > ::declaration()
            ],
        );
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        let no_recursion_flag = definitions.get(&Self::declaration()).is_none();
        Self::add_definition(Self::declaration(), definition, definitions);
        if no_recursion_flag {
            <Tomatoes as borsh::BorshSchema>::add_definitions_recursively(definitions);
            <Oil as borsh::BorshSchema>::add_definitions_recursively(definitions);
        }
    }
}

